; ModuleID = '/home/carl/AnghaBench/reactos/base/services/nfsd/extr_acl.c_map_dacl_2_nfs4acl.c'
source_filename = "/home/carl/AnghaBench/reactos/base/services/nfsd/extr_acl.c_map_dacl_2_nfs4acl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_10__ = type { i32, i32 }
%struct.TYPE_9__ = type { i32, %struct.TYPE_12__*, i64 }
%struct.TYPE_12__ = type { i32, i32, i64, i8* }
%struct.TYPE_11__ = type { i32, i32, i32 }

@ACLLVL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [46 x i8] c"this is a NULL dacl: all access to an object\0A\00", align 1
@ACE4_EVERYONE = common dso_local global i32 0, align 4
@ACE4_ACCESS_ALLOWED_ACE_TYPE = common dso_local global i8* null, align 8
@NF4DIR = common dso_local global i32 0, align 4
@ACE4_ALL_DIR = common dso_local global i32 0, align 4
@ACE4_ALL_FILE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [28 x i8] c"NON-NULL dacl with %d ACEs\0A\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"ACL\0A\00", align 1
@.str.3 = private unnamed_addr constant [43 x i8] c"map_dacl_2_nfs4acl: GetAce failed with %d\0A\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"ACE\0A\00", align 1
@.str.5 = private unnamed_addr constant [14 x i8] c"ACE TYPE: %x\0A\00", align 1
@ACCESS_ALLOWED_ACE_TYPE = common dso_local global i32 0, align 4
@ACCESS_DENIED_ACE_TYPE = common dso_local global i32 0, align 4
@ACE4_ACCESS_DENIED_ACE_TYPE = common dso_local global i8* null, align 8
@.str.6 = private unnamed_addr constant [45 x i8] c"map_dacl_2_nfs4acl: unsupported ACE type %d\0A\00", align 1
@ERROR_NOT_SUPPORTED = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_10__*, i32, i32, %struct.TYPE_9__*, i32, i8*)* @map_dacl_2_nfs4acl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @map_dacl_2_nfs4acl(%struct.TYPE_10__* %0, i32 %1, i32 %2, %struct.TYPE_9__* %3, i32 %4, i8* %5) #0 {
  %7 = alloca %struct.TYPE_10__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca %struct.TYPE_9__*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca %struct.TYPE_11__*, align 8
  %16 = alloca i64, align 8
  store %struct.TYPE_10__* %0, %struct.TYPE_10__** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32 %2, i32* %9, align 4
  store %struct.TYPE_9__* %3, %struct.TYPE_9__** %10, align 8
  store i32 %4, i32* %11, align 4
  store i8* %5, i8** %12, align 8
  %17 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %18 = icmp eq %struct.TYPE_10__* %17, null
  br i1 %18, label %19, label %72

19:                                               ; preds = %6
  %20 = load i32, i32* @ACLLVL, align 4
  %21 = call i32 (i32, i8*, ...) @dprintf(i32 %20, i8* getelementptr inbounds ([46 x i8], [46 x i8]* @.str, i64 0, i64 0))
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %23 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %22, i32 0, i32 0
  store i32 1, i32* %23, align 8
  %24 = call i8* @calloc(i32 1, i32 4)
  %25 = bitcast i8* %24 to %struct.TYPE_12__*
  %26 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %27 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %26, i32 0, i32 1
  store %struct.TYPE_12__* %25, %struct.TYPE_12__** %27, align 8
  %28 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %29 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %28, i32 0, i32 1
  %30 = load %struct.TYPE_12__*, %struct.TYPE_12__** %29, align 8
  %31 = icmp eq %struct.TYPE_12__* %30, null
  br i1 %31, label %32, label %34

32:                                               ; preds = %19
  %33 = call i32 (...) @GetLastError()
  store i32 %33, i32* %13, align 4
  br label %221

34:                                               ; preds = %19
  %35 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %36 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %35, i32 0, i32 2
  store i64 0, i64* %36, align 8
  %37 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %38 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %37, i32 0, i32 1
  %39 = load %struct.TYPE_12__*, %struct.TYPE_12__** %38, align 8
  %40 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 8
  %42 = load i32, i32* @ACE4_EVERYONE, align 4
  %43 = load i32, i32* @ACE4_EVERYONE, align 4
  %44 = call i64 @strlen(i32 %43)
  %45 = add nsw i64 %44, 1
  %46 = call i32 @memcpy(i32 %41, i32 %42, i64 %45)
  %47 = load i8*, i8** @ACE4_ACCESS_ALLOWED_ACE_TYPE, align 8
  %48 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %49 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %48, i32 0, i32 1
  %50 = load %struct.TYPE_12__*, %struct.TYPE_12__** %49, align 8
  %51 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %50, i32 0, i32 3
  store i8* %47, i8** %51, align 8
  %52 = load i32, i32* %11, align 4
  %53 = load i32, i32* @NF4DIR, align 4
  %54 = icmp eq i32 %52, %53
  br i1 %54, label %55, label %61

55:                                               ; preds = %34
  %56 = load i32, i32* @ACE4_ALL_DIR, align 4
  %57 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %58 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %57, i32 0, i32 1
  %59 = load %struct.TYPE_12__*, %struct.TYPE_12__** %58, align 8
  %60 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %59, i32 0, i32 1
  store i32 %56, i32* %60, align 4
  br label %67

61:                                               ; preds = %34
  %62 = load i32, i32* @ACE4_ALL_FILE, align 4
  %63 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %64 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %63, i32 0, i32 1
  %65 = load %struct.TYPE_12__*, %struct.TYPE_12__** %64, align 8
  %66 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %65, i32 0, i32 1
  store i32 %62, i32* %66, align 4
  br label %67

67:                                               ; preds = %61, %55
  %68 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %69 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %68, i32 0, i32 1
  %70 = load %struct.TYPE_12__*, %struct.TYPE_12__** %69, align 8
  %71 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %70, i32 0, i32 2
  store i64 0, i64* %71, align 8
  br label %219

72:                                               ; preds = %6
  %73 = load i32, i32* @ACLLVL, align 4
  %74 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %75 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %74, i32 0, i32 0
  %76 = load i32, i32* %75, align 4
  %77 = call i32 (i32, i8*, ...) @dprintf(i32 %73, i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.1, i64 0, i64 0), i32 %76)
  %78 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %79 = bitcast %struct.TYPE_10__* %78 to i8*
  %80 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %81 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %80, i32 0, i32 1
  %82 = load i32, i32* %81, align 4
  %83 = call i32 @print_hexbuf_no_asci(i32 3, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8* %79, i32 %82)
  %84 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %85 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %84, i32 0, i32 0
  %86 = load i32, i32* %85, align 4
  %87 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %88 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %87, i32 0, i32 0
  store i32 %86, i32* %88, align 8
  %89 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %90 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %89, i32 0, i32 0
  %91 = load i32, i32* %90, align 8
  %92 = call i8* @calloc(i32 %91, i32 4)
  %93 = bitcast i8* %92 to %struct.TYPE_12__*
  %94 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %95 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %94, i32 0, i32 1
  store %struct.TYPE_12__* %93, %struct.TYPE_12__** %95, align 8
  %96 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %97 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %96, i32 0, i32 1
  %98 = load %struct.TYPE_12__*, %struct.TYPE_12__** %97, align 8
  %99 = icmp eq %struct.TYPE_12__* %98, null
  br i1 %99, label %100, label %102

100:                                              ; preds = %72
  %101 = call i32 (...) @GetLastError()
  store i32 %101, i32* %13, align 4
  br label %221

102:                                              ; preds = %72
  %103 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %104 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %103, i32 0, i32 2
  store i64 0, i64* %104, align 8
  store i32 0, i32* %14, align 4
  br label %105

105:                                              ; preds = %215, %102
  %106 = load i32, i32* %14, align 4
  %107 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %108 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %107, i32 0, i32 0
  %109 = load i32, i32* %108, align 4
  %110 = icmp slt i32 %106, %109
  br i1 %110, label %111, label %218

111:                                              ; preds = %105
  %112 = load %struct.TYPE_10__*, %struct.TYPE_10__** %7, align 8
  %113 = load i32, i32* %14, align 4
  %114 = call i32 @GetAce(%struct.TYPE_10__* %112, i32 %113, %struct.TYPE_11__** %15)
  store i32 %114, i32* %13, align 4
  %115 = load i32, i32* %13, align 4
  %116 = icmp ne i32 %115, 0
  br i1 %116, label %121, label %117

117:                                              ; preds = %111
  %118 = call i32 (...) @GetLastError()
  store i32 %118, i32* %13, align 4
  %119 = load i32, i32* %13, align 4
  %120 = call i32 @eprintf(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str.3, i64 0, i64 0), i32 %119)
  br label %223

121:                                              ; preds = %111
  %122 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %123 = ptrtoint %struct.TYPE_11__* %122 to i64
  store i64 %123, i64* %16, align 8
  %124 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %125 = bitcast %struct.TYPE_11__* %124 to i8*
  %126 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %127 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %126, i32 0, i32 2
  %128 = load i32, i32* %127, align 4
  %129 = call i32 @print_hexbuf_no_asci(i32 3, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i8* %125, i32 %128)
  %130 = load i32, i32* @ACLLVL, align 4
  %131 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %132 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %131, i32 0, i32 0
  %133 = load i32, i32* %132, align 4
  %134 = call i32 (i32, i8*, ...) @dprintf(i32 %130, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.5, i64 0, i64 0), i32 %133)
  %135 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %136 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %135, i32 0, i32 0
  %137 = load i32, i32* %136, align 4
  %138 = load i32, i32* @ACCESS_ALLOWED_ACE_TYPE, align 4
  %139 = icmp eq i32 %137, %138
  br i1 %139, label %140, label %149

140:                                              ; preds = %121
  %141 = load i8*, i8** @ACE4_ACCESS_ALLOWED_ACE_TYPE, align 8
  %142 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %143 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %142, i32 0, i32 1
  %144 = load %struct.TYPE_12__*, %struct.TYPE_12__** %143, align 8
  %145 = load i32, i32* %14, align 4
  %146 = sext i32 %145 to i64
  %147 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %144, i64 %146
  %148 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %147, i32 0, i32 3
  store i8* %141, i8** %148, align 8
  br label %171

149:                                              ; preds = %121
  %150 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %151 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %150, i32 0, i32 0
  %152 = load i32, i32* %151, align 4
  %153 = load i32, i32* @ACCESS_DENIED_ACE_TYPE, align 4
  %154 = icmp eq i32 %152, %153
  br i1 %154, label %155, label %164

155:                                              ; preds = %149
  %156 = load i8*, i8** @ACE4_ACCESS_DENIED_ACE_TYPE, align 8
  %157 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %158 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %157, i32 0, i32 1
  %159 = load %struct.TYPE_12__*, %struct.TYPE_12__** %158, align 8
  %160 = load i32, i32* %14, align 4
  %161 = sext i32 %160 to i64
  %162 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %159, i64 %161
  %163 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %162, i32 0, i32 3
  store i8* %156, i8** %163, align 8
  br label %170

164:                                              ; preds = %149
  %165 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %166 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %165, i32 0, i32 0
  %167 = load i32, i32* %166, align 4
  %168 = call i32 @eprintf(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.6, i64 0, i64 0), i32 %167)
  %169 = load i32, i32* @ERROR_NOT_SUPPORTED, align 4
  store i32 %169, i32* %13, align 4
  br label %223

170:                                              ; preds = %155
  br label %171

171:                                              ; preds = %170, %140
  %172 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %173 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %172, i32 0, i32 1
  %174 = load i32, i32* %173, align 4
  %175 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %176 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %175, i32 0, i32 1
  %177 = load %struct.TYPE_12__*, %struct.TYPE_12__** %176, align 8
  %178 = load i32, i32* %14, align 4
  %179 = sext i32 %178 to i64
  %180 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %177, i64 %179
  %181 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %180, i32 0, i32 2
  %182 = call i32 @map_aceflags(i32 %174, i64* %181)
  %183 = load %struct.TYPE_11__*, %struct.TYPE_11__** %15, align 8
  %184 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %183, i64 1
  %185 = bitcast %struct.TYPE_11__* %184 to i32*
  %186 = load i32, i32* %185, align 4
  %187 = load i32, i32* %11, align 4
  %188 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %189 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %188, i32 0, i32 1
  %190 = load %struct.TYPE_12__*, %struct.TYPE_12__** %189, align 8
  %191 = load i32, i32* %14, align 4
  %192 = sext i32 %191 to i64
  %193 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %190, i64 %192
  %194 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %193, i32 0, i32 1
  %195 = call i32 @map_acemask(i32 %186, i32 %187, i32* %194)
  %196 = load i64, i64* %16, align 8
  %197 = add i64 %196, 8
  store i64 %197, i64* %16, align 8
  %198 = load i64, i64* %16, align 8
  %199 = load i32, i32* %8, align 4
  %200 = load i32, i32* %9, align 4
  %201 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %202 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %201, i32 0, i32 1
  %203 = load %struct.TYPE_12__*, %struct.TYPE_12__** %202, align 8
  %204 = load i32, i32* %14, align 4
  %205 = sext i32 %204 to i64
  %206 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %203, i64 %205
  %207 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %206, i32 0, i32 0
  %208 = load i32, i32* %207, align 8
  %209 = load i8*, i8** %12, align 8
  %210 = call i32 @map_nfs4ace_who(i64 %198, i32 %199, i32 %200, i32 %208, i8* %209)
  store i32 %210, i32* %13, align 4
  %211 = load i32, i32* %13, align 4
  %212 = icmp ne i32 %211, 0
  br i1 %212, label %213, label %214

213:                                              ; preds = %171
  br label %223

214:                                              ; preds = %171
  br label %215

215:                                              ; preds = %214
  %216 = load i32, i32* %14, align 4
  %217 = add nsw i32 %216, 1
  store i32 %217, i32* %14, align 4
  br label %105

218:                                              ; preds = %105
  br label %219

219:                                              ; preds = %218, %67
  %220 = load i32, i32* @ERROR_SUCCESS, align 4
  store i32 %220, i32* %13, align 4
  br label %221

221:                                              ; preds = %223, %219, %100, %32
  %222 = load i32, i32* %13, align 4
  ret i32 %222

223:                                              ; preds = %213, %164, %117
  %224 = load %struct.TYPE_9__*, %struct.TYPE_9__** %10, align 8
  %225 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %224, i32 0, i32 1
  %226 = load %struct.TYPE_12__*, %struct.TYPE_12__** %225, align 8
  %227 = call i32 @free(%struct.TYPE_12__* %226)
  br label %221
}

declare dso_local i32 @dprintf(i32, i8*, ...) #1

declare dso_local i8* @calloc(i32, i32) #1

declare dso_local i32 @GetLastError(...) #1

declare dso_local i32 @memcpy(i32, i32, i64) #1

declare dso_local i64 @strlen(i32) #1

declare dso_local i32 @print_hexbuf_no_asci(i32, i8*, i8*, i32) #1

declare dso_local i32 @GetAce(%struct.TYPE_10__*, i32, %struct.TYPE_11__**) #1

declare dso_local i32 @eprintf(i8*, i32) #1

declare dso_local i32 @map_aceflags(i32, i64*) #1

declare dso_local i32 @map_acemask(i32, i32, i32*) #1

declare dso_local i32 @map_nfs4ace_who(i64, i32, i32, i32, i8*) #1

declare dso_local i32 @free(%struct.TYPE_12__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
